Adding a normal LogView as there are situations where I want to log just text, not MIDI messages. TODO: Rebase the MidiLogView so it uses this LogView.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ ENDIF()
 # Define the sources for the static library
 set(Sources
 	LambdaButtonStrip.cpp LambdaButtonStrip.h
+	LogView.cpp LogView.h
 	MidiLogView.cpp MidiLogView.h
 	README.md
 	LICENSE
