First time for me using the JUCE table component. This is a bit... unusal.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(Sources
 	MidiLogView.cpp MidiLogView.h
 	PatchButton.cpp PatchButton.h
 	PatchButtonGrid.cpp PatchButtonGrid.h
+	SimpleTable.h
 	README.md
 	LICENSE
 )
