Change my layouting rules - any widget should always use the full area it is given - it is the responsibility of the using Component to provide proper padding. Invent an InsetBox wrapper Component to make this easier.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ ENDIF()
 
 # Define the sources for the static library
 set(Sources
+	HorizontalLayoutContainer.cpp HorizontalLayoutContainer.h
+	InsetBox.cpp InsetBox.h
 	LambdaButtonStrip.cpp LambdaButtonStrip.h
 	LogView.cpp LogView.h
 	MidiLogView.cpp MidiLogView.h
