Introducing the SynthList class, which is really just a horizontal button strip with a green bar when the entry is "Active", i.e. the synth was detected.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(Sources
 	PatchButtonGrid.cpp PatchButtonGrid.h
 	PropertyEditor.cpp PropertyEditor.h
 	SimpleTable.h
+	SynthList.cpp SynthList.h
 	README.md
 	LICENSE
 	${RESOURCE_FILES}
