Take the idea of the LambdaMenuModel from the BCRMaster software - there, I did combine the actions defined in a LambdaButtonStrip and turned that into a menu without showing the button strip.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ set(Sources
 	HorizontalLayoutContainer.cpp HorizontalLayoutContainer.h
 	InsetBox.cpp InsetBox.h
 	LambdaButtonStrip.cpp LambdaButtonStrip.h
+	LambdaMenuModel.cpp LambdaMenuModel.h
 	LogView.cpp LogView.h
 	MidiLogView.cpp MidiLogView.h
 	PatchButton.cpp PatchButton.h
