Need a subclass of TextButton to catch the key down and key up states, when I want to controll something while the button is pressed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ set(Sources
 	LambdaMenuModel.cpp LambdaMenuModel.h
 	LogView.cpp LogView.h
 	MidiLogView.cpp MidiLogView.h
+	MouseUpAndDownButton.h
 	PatchButton.cpp PatchButton.h
 	PatchButtonGrid.cpp PatchButtonGrid.h
 	PropertyEditor.cpp PropertyEditor.h
