Adding a simple ProgressHandlerWindow based on the JUCE ThreadWIthProgressWindow, that can be used for all kind of progress dialogs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ set(Sources
 	MouseUpAndDownButton.h
 	PatchButton.cpp PatchButton.h
 	PatchButtonGrid.cpp PatchButtonGrid.h
+	ProgressHandlerWindow.cpp ProgressHandlerWindow.h
 	PropertyEditor.cpp PropertyEditor.h
 	SimpleTable.h
 	SynthList.cpp SynthList.h
