Make the button of the PatchButtonGrid templated, because our more special software needs more special buttons. This is a quick hack, and should not really be necessary if I had proper base interfaces. Anyway, let's move on and get something done!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ set(Sources
 	MidiLogView.cpp MidiLogView.h
 	MouseUpAndDownButton.h
 	PatchButton.cpp PatchButton.h
-	PatchButtonGrid.cpp PatchButtonGrid.h
+	PatchButtonGrid.h
 	ProgressHandlerWindow.cpp ProgressHandlerWindow.h
 	PropertyEditor.cpp PropertyEditor.h
 	SimpleTable.h
