First version of a splittered component, encapsulating the use of the StretchableLayoutManager and the resizer bars, implement for one splitter and two splitters.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ set(Sources
 	ProgressHandlerWindow.cpp ProgressHandlerWindow.h
 	PropertyEditor.cpp PropertyEditor.h
 	SimpleTable.h
+	SplitteredComponent.cpp SplitteredComponent.h
 	SynthList.cpp SynthList.h
 	Thumbnail.cpp Thumbnail.h
 	README.md
