Adding a new widget - a text search box which is a text entry box with a clear button.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ set(Sources
 	SimpleTable.h
 	SplitteredComponent.cpp SplitteredComponent.h
 	SynthList.cpp SynthList.h
+	TextSearchBox.cpp TextSearchBox.h
 	Thumbnail.cpp Thumbnail.h
 	README.md
 	LICENSE
