Refactored - moving the GroupNode from the PatchListTree into a generic class TreeViewNode, as there is no KnobKraft specific code in the class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(Sources
 	SynthList.cpp SynthList.h
 	TextSearchBox.cpp TextSearchBox.h
 	Thumbnail.cpp Thumbnail.h
+	TreeViewNode.h TreeViewNode.cpp
 	README.md
 	LICENSE
 	${RESOURCE_FILES}
