Adding a small helper class LambdaLayoutBox, that turns the override into a lambda when implementing new Components, and adding a simple RecycleBin Image Component with a drop handler you can set.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ set(Sources
 	PatchButtonGrid.h
 	ProgressHandlerWindow.cpp ProgressHandlerWindow.h
 	PropertyEditor.cpp PropertyEditor.h
+	RecycleBin.cpp RecycleBin.h
 	SimpleTable.h
 	SplitteredComponent.cpp SplitteredComponent.h
 	SynthList.cpp SynthList.h
