Creating two new widgets, the customizedrotary, which doesn't really do anything useful yet, and a quick "two label slider" because I do not want to put that code into the JammerNetz MainComponent. Sorry about that, but that's how it is on my terms ;-)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ set(Sources
 	CategoryButtons.cpp CategoryButtons.h
 	CollapsibleContainer.cpp CollapsibleContainer.h
 	ColourHelpers.cpp ColourHelpers.h
+	CustomizedRotary.cpp CustomizedRotary.h
 	HorizontalLayoutContainer.cpp HorizontalLayoutContainer.h
 	InfoText.cpp InfoText.h
 	InsetBox.cpp InsetBox.h
@@ -41,6 +42,7 @@ set(Sources
 	SimpleTable.h
 	SynthList.cpp SynthList.h
 	Thumbnail.cpp Thumbnail.h
+	TwoLabelSlider.cpp TwoLabelSlider.h
 	README.md
 	LICENSE
 	${RESOURCE_FILES}
