--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,40 @@
-#
-#  Copyright (c) 2019 Christof Ruch. All rights reserved.
-#
-#  Dual licensed: Distributed under Affero GPL license by default, an MIT license is available for purchase
-#
+#[[
+MIT License
+
+Copyright (c) 2019-2021 Christof Ruch
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+]]
 
 project(juce-widgets)
 
 # If you also use https://github.com/FigBug/Gin, turn this on
 OPTION(GIN_AVAILABLE "Is the Gin library available and included into CMake" OFF)
 
-set(RESOURCE_FILES 
+set(RESOURCE_FILES
 	resources/heart-32.png
 	resources/blind-symbol-of-an-opened-eye-with-a-slash.png
 	resources/iconmonstr-magnifier-6-64.png
 )
 
 add_custom_command(OUTPUT ${CMAKE_CURRENT_LIST_DIR}/BinaryResources.h
-	COMMAND ${CMAKE_COMMAND} -P createResources.cmake	
+	COMMAND ${CMAKE_COMMAND} -P createResources.cmake
 	DEPENDS ${RESOURCE_FILES}
 	COMMENT "Compiling binary resources"
 	WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
