[juce namespace] Modernize the library by no longer using JuceHeader.h, and no longer forcing using namespace juce on us. Auto format and license year change.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,8 +12,8 @@ repos:
     rev: 'master'
     hooks:
     -  id: licenseheaders
-       args: ["-t", ".copyright.tmpl", "-y", "2019-2021", "-o", "Christof Ruch", "-x", ".pre-commit-config.yaml", "LICENSE.md", "-f"]
--   repo: git://github.com/doublify/pre-commit-clang-format
-    rev: master
+       args: ["-t", ".copyright.tmpl", "-y", "2019-2023", "-o", "Christof Ruch", "-x", ".pre-commit-config.yaml", "LICENSE.md", "-f"]
+-   repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: v14.0.6
     hooks:
     -   id: clang-format
