--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,5 +107,5 @@ if (MSVC)
 	endif()
 else()
     # lots of warnings and all warnings as errors
-    #target_compile_options(juce-widgets PRIVATE -Wall -Wextra -pedantic -Werror)
+    target_compile_options(juce-widgets PRIVATE -Wall -Wextra -pedantic -Werror)
 endif()
