Prepare for right click, shift click, and long click handling in PatchButtons by adding a subclassed button that can be used to process more signals.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ set(Sources
 	SynthList.cpp SynthList.h
 	TextSearchBox.cpp TextSearchBox.h
 	Thumbnail.cpp Thumbnail.h
+	TouchButton.cpp TouchButton.h
 	TreeViewNode.h TreeViewNode.cpp
 	TwoLabelSlider.cpp TwoLabelSlider.h
 	README.md
