Adding a class that will allow an edit box to keep its caret position and even selection even when the user alt tabbed away and comes back. Activating this for the tree node inline editing only for now, but this seems to work and be useful!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(Sources
 	CollapsibleContainer.cpp CollapsibleContainer.h
 	ColourHelpers.cpp ColourHelpers.h
 	CustomizedRotary.cpp CustomizedRotary.h
+	EditFocusKeeper.h EditFocusKeeper.cpp
 	HorizontalLayoutContainer.cpp HorizontalLayoutContainer.h
 	IconHelper.cpp IconHelper.h
 	InfoText.cpp InfoText.h
