Adding a component that  can be used to debug juce ValueTrees by automatically mirroring the ValueTree into a TreeView showing all properties and children.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ set(Sources
 	Thumbnail.cpp Thumbnail.h
 	TouchButton.cpp TouchButton.h
 	TreeViewNode.h TreeViewNode.cpp
+	ValueTreeViewer.cpp ValueTreeViewer.h
 	TwoLabelSlider.cpp TwoLabelSlider.h
 	README.md
 	LICENSE
